--- a/components/index.html
+++ b/components/index.html
@@ -36,8 +36,8 @@
       overflow-x: hidden;
     }
   </style>
-<link rel="stylesheet" href="styles.f7e681ff59b5b02caa68.css"></head>
+<link rel="stylesheet" href="styles.78ef59e7b9655fae118e.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.ce9e8e465a86e54e1768.js"></script><script type="text/javascript" src="scripts.7d9a639397a9152a12a3.js"></script><script type="text/javascript" src="main.4aa9312852a00252fc7e.js"></script></body>
+<script src="runtime-es2015.703a23e48ad83c851e49.js" type="module"></script><script src="polyfills-es2015.95164b371a42a0bc28c3.js" type="module"></script><script src="runtime-es5.465c2333d355155ec5f3.js" nomodule defer></script><script src="polyfills-es5.b5cb0d00bd669bc87dc1.js" nomodule defer></script><script src="scripts.6e3b1017b80c91d5cd9e.js" defer></script><script src="main-es2015.dcd7ac241e2e7c8e7807.js" type="module"></script><script src="main-es5.d8075c14b5fef8387e41.js" nomodule defer></script></body>
 </html>
