--- a/components/index.html
+++ b/components/index.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#158fef">
   <meta name="msapplication-navbutton-color" content="#158fef">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <base href="/">
+  <base href="/components/">
 
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
